example/secondfile/objects/ATOM_End_Customer__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Legal Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <formula>TRIM( Company_Legal_Name__c  &amp;&quot;_&quot;&amp;  DUNS_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ATOM End Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Zip_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>End Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATOM End Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>